--- a/flexbox/one/main.css
+++ b/flexbox/one/main.css
@@ -26,7 +26,8 @@ nav ul {
 }
 
 #logo  {
-    height: 30px;
+    height: 50px;
+    borde: 1px solid white;
 }
 
 nav ul li {
@@ -37,6 +38,8 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
+    color: black;
+    font-size: 18px;
 }
 
 nav ul li a:hover {
@@ -113,7 +116,8 @@ cta-btn {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    margin: 100px 0
+    margin: 100px 0;
+    justify-content: center;
 }
 
 .product-item-container {
@@ -121,7 +125,7 @@ cta-btn {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    width: 28%;
+    width: 22%;
     margin: 14px;
     align-content: center;
     text-align: left;
