--- a/DOM/main.css
+++ b/DOM/main.css
@@ -20,6 +20,10 @@ header{
     /*margin: 15px;*/
 }
 
+#pasta:hover {
+    opacity: 0.9;
+}
+
 #bed {
     background: url('assets/nathan-oakley-kfIN3cGA5xE-unsplash.jpg');
     background-size: cover;
@@ -35,3 +39,4 @@ header{
     border: 3px solid #f0f0f0;
     /*margin: 15px;*/
 }
+
