--- a/jquery/jquery-intro-lecture.css
+++ b/jquery/jquery-intro-lecture.css
@@ -10,3 +10,10 @@
     background-color: lavender;
 }
 
+.pink  {
+    background-color: lightpink;
+}
+
+.orange {
+    background-color: orange;
+}
